@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>INSTALL - How to install and configure DBD::mysql</TITLE>
-<LINK REV="made" HREF="mailto:bhcompile@stripples.devel.redhat.com">
+<LINK REV="made" HREF="mailto:bhcompile@daffy.perf.redhat.com">
 </HEAD>
 
 <BODY>
