@@ -1,3 +1,9 @@
+2002-04-30  Jochen Wiedmann  <joe@ispsoft.de> (0.2015)
+
+	* Makefile.PL: Removed dbimon and pmysql from
+	  the EXE_FILES list. Andreas Koenig
+	  <andreas.koenig@anima.de>
+
 2002-04-17  Jochen Wiedmann  <joe@ispsoft.de> (2.1014)
 
 	* dbdimp.c: Fixed mysql_is_auto_increment.
